fix sizing on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -106,6 +106,14 @@
 .references-container p:first-letter {
   margin-left: -20px;
 }
+@media only screen and (max-width: 768px) {
+  .references-container {
+    width: 90%;
+  }
+  .methods-container {
+    width: 90%;
+  }
+}
 .button-container {
   padding: 10px 0;
   margin: 0 auto;
